// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountdownTimer Should render the component 1`] = `
<div
  className="cnt-CountdownTimer"
>
  <div
    className="cnt-CountdownTimer_ReactCountdownClock"
  >
    <Circle
      animate={true}
      animationDuration="1s"
      bgColor="#5a2da5"
      lineWidth="50"
      percentSpacing={10}
      progress={0}
      progressColor="#a971f9"
      responsive={false}
      roundedStroke={false}
      showPercentage={false}
      showPercentageSymbol={true}
      size="250"
      textColor="#6b778c"
      textStyle={
        Object {
          "font": "bold 4rem Helvetica, Arial, sans-serif",
        }
      }
    />
    <div
      className="cnt-CountdownTimer_TimeContainer"
    >
      <div
        className="cnt-CountdownTimer_Time"
      >
        <div
          className="cnt-CountdownTimer_TimeItem"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            1
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Days
          </div>
        </div>
        <div
          className="cnt-CountdownTimer_TimeItem cnt-CountdownTimer_TimeItem-blinking"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            4
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Hours
          </div>
        </div>
        <div
          className="cnt-CountdownTimer_TimeItem"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            45
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Mins
          </div>
        </div>
      </div>
      <div
        className="cnt-CountdownTimer_Message"
      >
        To start of tier 1 of 2
      </div>
    </div>
  </div>
</div>
`;

exports[`CountdownTimer Should render the component showing only the seconds 1`] = `
<div
  className="cnt-CountdownTimer"
>
  <div
    className="cnt-CountdownTimer_ReactCountdownClock"
  >
    <Circle
      animate={true}
      animationDuration="1s"
      bgColor="#5a2da5"
      lineWidth="50"
      percentSpacing={10}
      progress={0}
      progressColor="#a971f9"
      responsive={false}
      roundedStroke={false}
      showPercentage={false}
      showPercentageSymbol={true}
      size="250"
      textColor="#6b778c"
      textStyle={
        Object {
          "font": "bold 4rem Helvetica, Arial, sans-serif",
        }
      }
    />
    <div
      className="cnt-CountdownTimer_TimeContainer"
    >
      <div
        className="cnt-CountdownTimer_Time"
      >
        <div
          className="cnt-CountdownTimer_TimeItem"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            1
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Days
          </div>
        </div>
        <div
          className="cnt-CountdownTimer_TimeItem cnt-CountdownTimer_TimeItem-blinking"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            4
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Hours
          </div>
        </div>
        <div
          className="cnt-CountdownTimer_TimeItem"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            45
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Mins
          </div>
        </div>
      </div>
      <div
        className="cnt-CountdownTimer_Message"
      >
        To start of tier 1 of 2
      </div>
    </div>
  </div>
</div>
`;

exports[`CountdownTimer Should render the component showing the time until the end of the tier 1`] = `
<div
  className="cnt-CountdownTimer"
>
  <div
    className="cnt-CountdownTimer_ReactCountdownClock"
  >
    <Circle
      animate={true}
      animationDuration="1s"
      bgColor="#5a2da5"
      lineWidth="50"
      percentSpacing={10}
      progress={0}
      progressColor="#a971f9"
      responsive={false}
      roundedStroke={false}
      showPercentage={false}
      showPercentageSymbol={true}
      size="250"
      textColor="#6b778c"
      textStyle={
        Object {
          "font": "bold 4rem Helvetica, Arial, sans-serif",
        }
      }
    />
    <div
      className="cnt-CountdownTimer_TimeContainer"
    >
      <div
        className="cnt-CountdownTimer_Time"
      >
        <div
          className="cnt-CountdownTimer_TimeItem"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            1
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Days
          </div>
        </div>
        <div
          className="cnt-CountdownTimer_TimeItem cnt-CountdownTimer_TimeItem-blinking"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            4
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Hours
          </div>
        </div>
        <div
          className="cnt-CountdownTimer_TimeItem"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            45
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Mins
          </div>
        </div>
      </div>
      <div
        className="cnt-CountdownTimer_Message"
      >
        To end of tier 1 of 2
      </div>
    </div>
  </div>
</div>
`;

exports[`CountdownTimer Should render the component when the crowdsale ended 1`] = `
<div
  className="cnt-CountdownTimer"
>
  <div
    className="cnt-CountdownTimer_ReactCountdownClock"
  >
    <Circle
      animate={true}
      animationDuration="1s"
      bgColor="#5a2da5"
      lineWidth="50"
      percentSpacing={10}
      progress={100}
      progressColor="#a971f9"
      responsive={false}
      roundedStroke={false}
      showPercentage={false}
      showPercentageSymbol={true}
      size="250"
      textColor="#6b778c"
      textStyle={
        Object {
          "font": "bold 4rem Helvetica, Arial, sans-serif",
        }
      }
    />
    <div
      className="cnt-CountdownTimer_TimeContainer"
    >
      <div
        className="cnt-CountdownTimer_Time"
      >
        <div
          className="cnt-CountdownTimer_TimeItem"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            1
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Days
          </div>
        </div>
        <div
          className="cnt-CountdownTimer_TimeItem cnt-CountdownTimer_TimeItem-blinking"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            4
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Hours
          </div>
        </div>
        <div
          className="cnt-CountdownTimer_TimeItem"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            45
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Mins
          </div>
        </div>
      </div>
      <div
        className="cnt-CountdownTimer_Message"
      >
        Crowdsale has ended
      </div>
    </div>
  </div>
</div>
`;

exports[`CountdownTimer Should render the component when the crowdsale was finalized 1`] = `
<div
  className="cnt-CountdownTimer"
>
  <div
    className="cnt-CountdownTimer_ReactCountdownClock"
  >
    <Circle
      animate={true}
      animationDuration="1s"
      bgColor="#5a2da5"
      lineWidth="50"
      percentSpacing={10}
      progress={100}
      progressColor="#a971f9"
      responsive={false}
      roundedStroke={false}
      showPercentage={false}
      showPercentageSymbol={true}
      size="250"
      textColor="#6b778c"
      textStyle={
        Object {
          "font": "bold 4rem Helvetica, Arial, sans-serif",
        }
      }
    />
    <div
      className="cnt-CountdownTimer_TimeContainer"
    >
      <div
        className="cnt-CountdownTimer_Time"
      >
        <div
          className="cnt-CountdownTimer_TimeItem"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            1
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Days
          </div>
        </div>
        <div
          className="cnt-CountdownTimer_TimeItem cnt-CountdownTimer_TimeItem-blinking"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            4
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Hours
          </div>
        </div>
        <div
          className="cnt-CountdownTimer_TimeItem"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            45
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Mins
          </div>
        </div>
      </div>
      <div
        className="cnt-CountdownTimer_Message"
      >
        crowdsale has been finalized
      </div>
    </div>
  </div>
</div>
`;

exports[`CountdownTimer Should render the component with alternative message 1`] = `
<div
  className="cnt-CountdownTimer"
>
  <div
    className="cnt-CountdownTimer_ReactCountdownClock"
  >
    <Circle
      animate={true}
      animationDuration="1s"
      bgColor="#5a2da5"
      lineWidth="50"
      percentSpacing={10}
      progress={0}
      progressColor="#a971f9"
      responsive={false}
      roundedStroke={false}
      showPercentage={false}
      showPercentageSymbol={true}
      size="250"
      textColor="#6b778c"
      textStyle={
        Object {
          "font": "bold 4rem Helvetica, Arial, sans-serif",
        }
      }
    />
    <div
      className="cnt-CountdownTimer_TimeContainer"
    >
      <div
        className="cnt-CountdownTimer_Time"
      >
        <div
          className="cnt-CountdownTimer_TimeItem"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            1
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Days
          </div>
        </div>
        <div
          className="cnt-CountdownTimer_TimeItem cnt-CountdownTimer_TimeItem-blinking"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            4
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Hours
          </div>
        </div>
        <div
          className="cnt-CountdownTimer_TimeItem"
        >
          <div
            className="cnt-CountdownTimer_TimeCount"
          >
            45
          </div>
          <div
            className="cnt-CountdownTimer_TimeInterval"
          >
            Mins
          </div>
        </div>
      </div>
      <div
        className="cnt-CountdownTimer_Message"
      >
        To start of tier 1 of 2
      </div>
      <div
        className="cnt-CountdownTimer_AltMessage"
      >
        Alternative Message
      </div>
    </div>
  </div>
</div>
`;
